Aplicaçao se conectando com a API do Github

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,22 +23,13 @@
     "react-hooks",
     "prettier"
   ],
-  "rules": {
+  "rules": {"camelcase": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [
-          ".tsx"
-        ]
-      }
-    ],
+    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+    "import/prefer-default-export": "off",
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": [
-      "error"
-    ],
-    "react/react-in-jsx-scope": "off",
+    "prettier/prettier": "error",
     "import/extensions": [
       "error",
       "ignorePackages",
@@ -46,9 +37,7 @@
         "ts": "never",
         "tsx": "never"
       }
-   ],
-   "import/prefer-default-export": "off",
-   "prettier/prettier": "error"
+    ]
   },
   "settings": {
     "import/resolver": {
